<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterActivity">

    <TextView
        android:id="@+id/characterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/characterTextView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nameTextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="@+id/characterTextView"
        app:layout_constraintTop_toBottomOf="@+id/characterTextView" />

    <TextView
        android:id="@+id/birthdateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bdTextView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/characterTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/namePlaceholderText"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/nameEditText"
        android:minHeight="48dp"
        android:text="@string/namePlaceholderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameTextView"
        app:layout_constraintTop_toBottomOf="@+id/characterTextView" />

    <CalendarView
        android:id="@+id/ageCalendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdateTextView" />

    <Button
        android:id="@+id/validateAgeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="validateCharacter"
        android:text="@string/validateCharacterText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageCalendarView" />
</androidx.constraintlayout.widget.ConstraintLayout>